# Mem-Brain

aln/: biomem.hypothesis.h1.aln  biomem.layer.microcircuit.aln
docs/: FORMAT.md  INTEGRATIONS.md
examples/eeg_network_to_trace/src/: main.rs
examples/prometheus-exporter/src/: main.rs
mem-brain/src/mem_brain/: spec.rs
rust/crates/biomem-core/src/: lib.rs
rust/crates/biomem-encoder/: Cargo.toml
rust/crates/biomem-encoder/src/: lib.rs
spec/: biomem-5d.aln  biomem-risk.aln
